# K-Watch

./: CMakeLists.txt  README.md  app.overlay  prj.conf
app/: CMakeLists.txt
app/src/: main.c
boards/: k_watch.overlay
firmware/boards/KhanhElectronics/K_watch/: K_watch-partition.dtsi  K_watch-pinctrl.dtsi  K_watch.dts  K_watch.yml  board.yml
modules/ble/: CMakeLists.txt
modules/ble/include/: ble_manager.h
modules/ble/src/: ble_manager.c
modules/driver/: CMakeLists.txt
src/: main.c
src/Drivers/Buttons/: Buttons.c  Buttons.h
src/Drivers/Screens/LPM013M126A/: LPM013M126A.c  LPM013M126A.h
src/Drivers/Screens/WatchAnalog/: WatchAnalog.c  WatchAnalog.h
src/ble/: ble_ancs.c  ble_ancs.h  ble_information.c  ble_information.h  ble_peripheral.c  ble_peripheral.h
src/drivers/rtc/: rv8263.c  rv8263.h
src/ui/driver/: KW_GFX.c  KW_GFX.h  KW_GFX_font.c  KW_GFX_font.h  LPM013M126A.c  LPM013M126A.h
src/ui/fonts/: FreeMono12pt7b.h  FreeMono18pt7b.h  FreeMono24pt7b.h  FreeMono9pt7b.h  FreeMonoBold12pt7b.h  FreeMonoBold18pt7b.h  FreeMonoBold24pt7b.h  FreeMonoBold9pt7b.h  FreeMonoBoldOblique12pt7b.h  FreeMonoBoldOblique18pt7b.h  FreeMonoBoldOblique24pt7b.h  FreeMonoBoldOblique9pt7b.h  FreeMonoOblique12pt7b.h  FreeMonoOblique18pt7b.h  FreeMonoOblique24pt7b.h  FreeMonoOblique9pt7b.h  FreeSans12pt7b.h  FreeSans18pt7b.h  FreeSans24pt7b.h  FreeSans9pt7b.h  FreeSansBold12pt7b.h  FreeSansBold18pt7b.h  FreeSansBold24pt7b.h  FreeSansBold9pt7b.h  FreeSansBoldOblique12pt7b.h  FreeSansBoldOblique18pt7b.h  FreeSansBoldOblique24pt7b.h  FreeSansBoldOblique9pt7b.h  FreeSansOblique12pt7b.h  FreeSansOblique18pt7b.h  FreeSansOblique24pt7b.h  FreeSansOblique9pt7b.h  FreeSerif12pt7b.h  FreeSerif18pt7b.h  FreeSerif24pt7b.h  FreeSerif9pt7b.h  FreeSerifBold12pt7b.h  FreeSerifBold18pt7b.h  FreeSerifBold24pt7b.h  FreeSerifBold9pt7b.h  (+13 more)
src/ui/watchface/: face_digital.c  face_digital.h  face_manager.c  face_manager.h
src/ui/watchface/face_information/: face_information.c  face_information.h
src/ui/watchface/face_main/: face_main.c  face_main.h
